...
              children: [
                RadioListTile<PaymentMethod>(
                  title: const Text('Tunai (Cash)'),
                  value: PaymentMethod.cash,
                ),
                RadioListTile<PaymentMethod>(
                  title: const Text('Transfer / Non-Tunai'),
                  value: PaymentMethod.transfer,
                ),
              ],
            ),
          ),
          if (_method == PaymentMethod.cash) ...[
...
                : widget.totalMinor;
            if (_method == PaymentMethod.cash && cash < widget.totalMinor) {
              return;
            }
            Navigator.pop(context, CheckoutAction(_method, cash));
          },
          child: const Text('KONFIRMASI'),
        ),
      ],
    );
  }
}

