...
    }
  }

  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      title: 'BizERP POS',
      theme: ThemeData(primarySwatch: Colors.blueGrey, useMaterial3: true),
      home: AnimatedBuilder(
        animation: Listenable.merge([widget.authStateNotifier, _tenantContext]),
        builder: (context, _) {
          if (widget.authStateNotifier.status == AuthStatus.unknown) {
            return const Scaffold(body: Center(child: CircularProgressIndicator()));
...
